<resources>
    <string name="app_name">calculator app</string>
    <string name="title">calculate</string>

    <!-- numbers -->
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>

    <!-- operations -->
    <string name="add">+</string>
    <string name="subtract">-</string>
    <string name="flip">±</string>
    <string name="multiply">×</string>
    <string name="divide">÷</string>

    <!-- function -->
    <string name="cl">C</string>
    <string name="decimal">.</string>
    <string name="back">←</string>
    <string name="equal">=</string>
    <string name="result"></string>
    <string name="action"></string>

</resources>