<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="sans-serif-medium"
        android:letterSpacing=".45"
        android:text="@string/title"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/colorQuarternary"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/divider"
        android:layout_width="409dp"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        android:background="?android:attr/listDivider"
        android:foregroundTint="@color/colorPrimaryDark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="77dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <Button
            android:id="@+id/add"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/colorPrimary"
            android:fontFamily="monospace"
            android:tag="opAdd"
            android:text="@string/add"
            android:textColor="#FFFFFF"
            android:textSize="36sp"
            android:onClick="onClick"/>

        <Button
            android:id="@+id/subtract"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/colorPrimary"
            android:fontFamily="monospace"
            android:tag="opSub"
            android:text="@string/subtract"
            android:textColor="#FFFFFF"
            android:textSize="36sp"
            android:onClick="onClick"/>

        <Button
            android:id="@+id/multiply"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/colorPrimary"
            android:fontFamily="monospace"
            android:tag="opMult"
            android:text="@string/multiply"
            android:textColor="#FFFFFF"
            android:textSize="36sp"
            android:onClick="onClick"/>

        <Button
            android:id="@+id/divide"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/colorPrimary"
            android:fontFamily="monospace"
            android:tag="opDiv"
            android:text="@string/divide"
            android:textColor="#FFFFFF"
            android:textSize="36sp"
            android:onClick="onClick"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="77dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <Button
            android:id="@+id/seven"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/colorTertiary"
            android:fontFamily="monospace"
            android:tag="num7"
            android:text="@string/seven"
            android:textColor="#FFFFFF"
            android:textSize="36sp"
            android:onClick="onClick"/>

        <Button
            android:id="@+id/eight"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/colorTertiary"
            android:fontFamily="monospace"
            android:tag="num8"
            android:text="@string/eight"
            android:textColor="#FFFFFF"
            android:textSize="36sp"
            android:onClick="onClick"/>

        <Button
            android:id="@+id/nine"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/colorTertiary"
            android:fontFamily="monospace"
            android:tag="num9"
            android:text="@string/nine"
            android:textColor="#FFFFFF"
            android:textSize="36sp"
            android:onClick="onClick"/>

        <Button
            android:id="@+id/button12"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/colorQuarternary"
            android:fontFamily="monospace"
            android:onClick="onClick"
            android:tag="opFlip"
            android:text="@string/flip"
            android:textColor="#FFFFFF"
            android:textSize="36sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="wrap_content"
        android:layout_height="77dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <Button
            android:id="@+id/four"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/colorTertiary"
            android:fontFamily="monospace"
            android:tag="num4"
            android:text="@string/four"
            android:textColor="#FFFFFF"
            android:textSize="36sp"
            android:onClick = "onClick"/>

        <Button
            android:id="@+id/five"
            android:layout_width="wrap_content"
            android:layout_height="77dp"
            android:layout_weight="1"
            android:backgroundTint="@color/colorTertiary"
            android:fontFamily="monospace"
            android:tag="num5"
            android:text="@string/five"
            android:textColor="#FFFFFF"
            android:textSize="36sp"
            android:onClick="onClick"/>

        <Button
            android:id="@+id/six"
            android:layout_width="wrap_content"
            android:layout_height="77dp"
            android:layout_weight="1"
            android:backgroundTint="@color/colorTertiary"
            android:fontFamily="monospace"
            android:tag="num6"
            android:text="@string/six"
            android:textColor="#FFFFFF"
            android:textSize="36sp"
            android:onClick="onClick"/>

        <Button
            android:id="@+id/button4"
            android:layout_width="wrap_content"
            android:layout_height="77dp"
            android:layout_weight="1"
            android:backgroundTint="@color/colorQuarternary"
            android:fontFamily="monospace"
            android:onClick="onClick"
            android:tag="opBack"
            android:text="@string/back"
            android:textColor="#FFFFFF"
            android:textSize="36sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="wrap_content"
        android:layout_height="77dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

        <Button
            android:id="@+id/one"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/colorTertiary"
            android:fontFamily="monospace"
            android:tag="num1"
            android:text="@string/one"
            android:textColor="#FFFFFF"
            android:textSize="36sp"
            android:onClick="onClick"/>

        <Button
            android:id="@+id/two"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/colorTertiary"
            android:fontFamily="monospace"
            android:tag="num2"
            android:text="@string/two"
            android:textColor="#FFFFFF"
            android:textSize="36sp"
            android:onClick="onClick"/>

        <Button
            android:id="@+id/three"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/colorTertiary"
            android:fontFamily="monospace"
            android:tag="num3"
            android:text="@string/three"
            android:textColor="#FFFFFF"
            android:textSize="36sp"
            android:onClick="onClick"/>

        <Button
            android:id="@+id/button8"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/colorQuarternary"
            android:fontFamily="monospace"
            android:onClick="onClick"
            android:tag="opClear"
            android:text="@string/cl"
            android:textColor="#FFFFFF"
            android:textSize="36sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="0dp"
        android:layout_height="73dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="30dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4">

        <Button
            android:id="@+id/zero"
            android:layout_width="5dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/colorTertiary"
            android:fontFamily="monospace"
            android:tag="num0"
            android:text="@string/zero"
            android:textColor="#FFFFFF"
            android:textSize="36sp"
            android:onClick="onClick"/>

        <Button
            android:id="@+id/button21"
            android:layout_width="5dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/colorQuarternary"
            android:fontFamily="monospace"
            android:onClick="onClick"
            android:tag="num."
            android:text="@string/decimal"
            android:textColor="#FFFFFF"
            android:textSize="36sp" />

        <Button
            android:id="@+id/button23"
            android:tag="opEqual"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/colorQuarternary"
            android:fontFamily="monospace"
            android:text="@string/equal"
            android:textColor="#FFFFFF"
            android:textSize="36sp"
            android:onClick="onClick"/>
    </LinearLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="342dp"
        android:layout_height="78dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="24dp"
        android:background="@color/colorAccent"
        android:capitalize="characters"
        android:fontFamily="monospace"
        android:gravity="center_vertical"
        android:text="@string/result"
        android:textAlignment="center"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider" />

    <TextView
        android:id="@+id/action"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="sans-serif-thin"
        android:text="@string/action"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintTop_toTopOf="@+id/textView" />

</androidx.constraintlayout.widget.ConstraintLayout>